--- a/scss/_parent.scss
+++ b/scss/_parent.scss
@@ -1,5 +1,6 @@
 $margin-center: 0 auto;
-$font-Tks: "fot-tsukuardgothic-std", sans-serif;
+$font-Tks: "fot-tsukuardgothic-std",
+sans-serif;
 $color-W: #fdfdfd;
 $color-B: #4B4237;
 $color-G: #1EAAAA;
@@ -58,7 +59,7 @@ body {
                 height: auto;
                 position: absolute;
                 left: 50%;
-                transform: scale(-1,1);
+                transform: scale(-1, 1);
             }
 
             .top-text-third {
@@ -322,12 +323,34 @@ body {
             text-align: center;
             color: $color-B;
         }
+
+        .parent-btn-animation0::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -130%;
+            z-index: 0;
+            background: $color-G;
+            width: 120%;
+            height: 100%;
+            transform: skewX(-25deg);
+        }
+
+        .parent-btn-animation0:hover::before {
+            animation: skewanime .5s forwards;
+        }
+
+        @keyframes skewanime {
+            100% {
+                left: -10%;
+            }
+        }
     }
 
-    
+
 
     .parent-main-1::before {
-        content:"";
+        content: "";
         position: absolute;
         bottom: 0;
         right: 0;
@@ -426,7 +449,7 @@ body {
     }
 
     .parent-main-2::before {
-        content:"";
+        content: "";
         position: absolute;
         bottom: 0;
         right: 0;
@@ -447,6 +470,8 @@ body {
         align-items: center;
         margin-bottom: 10%;
         margin: 0 auto;
+        position: relative;
+        overflow: hidden;
     }
 
     a {
@@ -455,6 +480,36 @@ body {
         font-family: $font-Tks;
         font-weight: bold;
         font-size: 2rem;
+        position: relative;
+        z-index: 3;
+    }
+
+    .parent-together .parent-btn:hover {
+        a {
+            color: #F7A514;
+        }
+    }
+
+    .parent-btn-animation::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -130%;
+        z-index: 0;
+        background: $color-W;
+        width: 120%;
+        height: 100%;
+        transform: skewX(-25deg);
+    }
+
+    .parent-btn-animation:hover::before {
+        animation: skewanime .5s forwards;
+    }
+
+    @keyframes skewanime {
+        100% {
+            left: -10%;
+        }
     }
 }
 
@@ -619,6 +674,10 @@ body {
     transition: all 0.6s;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
+    background-image: url(/img/menuback.png);
+    background-repeat: no-repeat;
+    background-size: 120%;
+    background-position: center;
 
     ul {
         width: 100%;
@@ -636,7 +695,7 @@ body {
             border-bottom: $border-W3;
             margin: 3% 0;
             padding-bottom: 5%;
-    
+
             a {
                 font-family: $font-Tks;
                 color: $color-W;
@@ -665,6 +724,41 @@ body {
                     color: $color-W;
                     font-size: 4rem;
                 }
+            }
+
+            .parent-menu-close:hover {
+                width: 60px;
+                height: 60px;
+            }
+        }
+
+        li:nth-child(1):hover {
+            a {
+                color: #F7A514;
+            }
+        }
+
+        li:nth-child(2):hover {
+            a {
+                color: #F7A514;
+            }
+        }
+
+        li:nth-child(3):hover {
+            a {
+                color: #F7A514;
+            }
+        }
+
+        li:nth-child(4):hover {
+            a {
+                color: #F7A514;
+            }
+        }
+
+        li:nth-child(5):hover {
+            a {
+                color: #F7A514;
             }
         }
 
@@ -711,43 +805,43 @@ body {
 
 @media screen and (max-width:600px) {
     #parent-top {
-    
+
         .top-main {
-    
+
             .top-text {
-    
+
                 .top-text-first {
                     font-size: 2rem;
                     top: 30%;
                     left: 17%;
                 }
-    
+
                 .top-text-second {
                     font-size: 2rem;
                     top: 30%;
                     left: 40%;
                 }
-    
+
                 img {
                     top: 30%;
                     left: 60%;
                 }
-    
+
                 .top-text-third {
                     font-size: 3rem;
                     top: 50%;
                     left: 15%;
                 }
             }
-    
+
             .top-character {
-    
+
                 .top-character-c {
                     width: 27%;
                     top: 8%;
                     left: 20%;
                 }
-    
+
                 .top-character-p {
                     width: 38%;
                     top: 3%;
@@ -755,70 +849,70 @@ body {
                 }
             }
         }
-    
+
         .top-background {
-    
+
             .top-background-1 {
                 width: 3%;
                 top: 8%;
                 left: 15%;
             }
-    
+
             .top-background-4 {
                 width: 5%;
                 top: 30%;
                 left: 10%;
             }
-    
+
             .top-background-6 {
                 width: 8%;
                 top: 40%;
                 left: 5%;
             }
-    
+
             .top-background-2 {
                 width: 5%;
                 top: 70%;
                 left: 10%;
             }
-    
+
             .top-background-0 {
                 width: 5%;
                 top: 80%;
                 left: 20%;
             }
-    
+
             .top-background-8 {
                 width: 5%;
                 top: 7%;
                 right: 20%;
             }
-    
+
             .top-background-3 {
                 width: 5%;
                 top: 30%;
                 right: 5%;
             }
-    
+
             .top-background-9 {
                 width: 5%;
                 top: 50%;
                 right: 10%;
             }
-    
+
             .top-background-5 {
                 width: 5%;
                 top: 75%;
                 right: 20%;
             }
-    
+
             .top-background-7 {
                 width: 5%;
                 top: 80%;
                 right: 5%;
             }
         }
-    
+
     }
 
     #parent-menu-btn {
@@ -827,31 +921,31 @@ body {
         bottom: 5%;
         right: 5%;
         border-radius: 15px;
-    
+
         img {
             width: 45%;
             height: auto;
             margin-top: 20%;
         }
-    
+
         p {
             font-family: $font-Tks;
             color: $color-W;
             font-size: 0.8em;
             margin-bottom: 10%;
-        } 
+        }
     }
 
     #parent-main {
         width: 100vw;
         height: 205vh;
         margin-top: 5vh;
-    
+
         .parent-main-1 {
             width: 100%;
             height: 66%;
             position: relative;
-    
+
             .parent-concept {
                 width: 100%;
                 height: 15%;
@@ -861,7 +955,7 @@ body {
                 align-items: center;
                 justify-content: center;
             }
-    
+
             .parent-what {
                 width: 80%;
                 height: 40%;
@@ -871,7 +965,7 @@ body {
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-    
+
                 .parent-what-flex {
                     width: 100%;
                     height: 70%;
@@ -879,7 +973,7 @@ body {
                     display: flex;
                     align-items: center;
                     justify-content: space-around;
-    
+
                     .parent-what-text {
                         width: 65%;
                         height: 90%;
@@ -887,18 +981,18 @@ body {
                         display: flex;
                         flex-direction: column;
                         justify-content: space-around;
-    
+
                         p {
                             text-align: left;
                             font-size: 0.5rem;
                         }
                     }
-    
+
                     .parent-what-img {
                         width: 50%;
                         height: 100%;
                         position: relative;
-    
+
                         .what-img-1 {
                             width: 70%;
                             height: auto;
@@ -907,7 +1001,7 @@ body {
                             top: -5%;
                             left: 5%;
                         }
-    
+
                         .what-img-2 {
                             width: 60%;
                             height: auto;
@@ -916,7 +1010,7 @@ body {
                             top: 25%;
                             left: 40%;
                         }
-    
+
                         .what-img-3 {
                             width: 60%;
                             height: auto;
@@ -927,9 +1021,9 @@ body {
                         }
                     }
                 }
-    
+
             }
-    
+
             .parent-ability {
                 width: 100%;
                 height: 30%;
@@ -937,12 +1031,12 @@ body {
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-    
+
                 p {
                     margin-bottom: 5%;
                 }
             }
-    
+
             .parent-title {
                 width: 60%;
                 height: 20%;
@@ -951,12 +1045,12 @@ body {
                 justify-content: center;
                 margin-bottom: 3%;
                 margin-top: 8vh;
-    
+
                 img {
                     width: 10%;
                     height: auto;
                 }
-    
+
                 h1 {
                     font-family: $font-Tks;
                     color: $color-G;
@@ -964,7 +1058,7 @@ body {
                     margin: 0 5%;
                 }
             }
-    
+
             p {
                 font-family: $font-Tks;
                 font-weight: bold;
@@ -973,11 +1067,11 @@ body {
                 color: $color-B;
             }
         }
-    
-        
-    
+
+
+
         .parent-main-1::before {
-            content:"";
+            content: "";
             position: absolute;
             bottom: 0;
             right: 0;
@@ -987,15 +1081,15 @@ body {
             border-width: 40px 100vw 0 0;
             border-color: transparent $color-G transparent transparent;
         }
-    
+
         .parent-main-2 {
             width: 100%;
             height: 34%;
-    
+
             .parent-together {
                 width: 100%;
                 height: 90%;
-    
+
                 .togehter-img-1 {
                     width: 24%;
                     height: auto;
@@ -1004,7 +1098,7 @@ body {
                     left: 10%;
                     transform: rotate(-5deg);
                 }
-    
+
                 .togehter-img-2 {
                     width: 30%;
                     height: auto;
@@ -1013,7 +1107,7 @@ body {
                     left: 35%;
                     transform: rotate(7deg);
                 }
-    
+
                 .togehter-img-3 {
                     width: 24%;
                     height: auto;
@@ -1021,7 +1115,7 @@ body {
                     top: -3%;
                     left: 65%;
                 }
-    
+
                 .togehter-img-4 {
                     width: 24%;
                     height: auto;
@@ -1030,7 +1124,7 @@ body {
                     right: 65%;
                     transform: rotate(6.5deg);
                 }
-    
+
                 .togehter-img-5 {
                     width: 33%;
                     height: auto;
@@ -1039,7 +1133,7 @@ body {
                     right: 35%;
                     transform: rotate(-10deg);
                 }
-    
+
                 .togehter-img-6 {
                     width: 24%;
                     height: auto;
@@ -1049,21 +1143,21 @@ body {
                     transform: rotate(5.5deg);
                 }
             }
-    
+
             h1 {
                 font-size: 2.5rem;
                 margin-top: 20%;
             }
-    
+
             p {
                 font-size: 1rem;
                 margin: 1% 0;
                 margin-bottom: 10%;
             }
         }
-    
+
         .parent-main-2::before {
-            content:"";
+            content: "";
             position: absolute;
             bottom: 0;
             right: 0;
@@ -1073,7 +1167,7 @@ body {
             border-width: 40px 100vw 0 0;
             border-color: transparent $color-W transparent transparent;
         }
-    
+
         .parent-btn {
             width: 45vw;
             height: 4vh;
@@ -1085,7 +1179,7 @@ body {
             margin-bottom: 10%;
             margin: 0 auto;
         }
-    
+
         a {
             text-decoration: none;
             color: $color-W;
@@ -1098,26 +1192,27 @@ body {
     .parent-footer {
         width: 100vw;
         height: 64vh;
-    
+
         .parent-footer-1 {
             width: 100%;
             height: 90%;
             padding: 5% 0;
             justify-content: space-between;
-    
+
             img {
                 width: 30%;
                 height: auto;
             }
-    
+
             .footer-btn-1 {
                 width: 74%;
                 height: 60%;
                 display: flex;
                 align-items: center;
-                flex-direction: column;;
+                flex-direction: column;
+                ;
                 justify-content: space-around;
-    
+
                 .footer-btn-ability {
                     width: 100%;
                     height: 45%;
@@ -1128,12 +1223,12 @@ body {
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
-    
+
                     .footer-ability-img {
                         width: 100%;
                         height: 50%;
                         position: relative;
-    
+
                         .footer-ability-img-1 {
                             width: 25%;
                             height: auto;
@@ -1141,7 +1236,7 @@ body {
                             top: -60%;
                             left: 25%;
                         }
-    
+
                         .footer-ability-img-2 {
                             width: 30%;
                             height: auto;
@@ -1150,7 +1245,7 @@ body {
                             right: 25%;
                         }
                     }
-    
+
                     a {
                         font-family: $font-Tks;
                         font-weight: bold;
@@ -1159,7 +1254,7 @@ body {
                         color: $color-B;
                     }
                 }
-    
+
                 .footer-btn-goods {
                     width: 100%;
                     height: 45%;
@@ -1169,41 +1264,41 @@ body {
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
-    
+
                     .footer-goods-img {
                         width: 100%;
                         height: 50%;
                         position: relative;
-    
+
                         .footer-goods-img-1 {
                             width: 40%;
                             top: -60%;
                             left: 30%;
                         }
-    
+
                         .footer-goods-img-2 {
                             width: 30%;
                             top: 5%;
                             left: 5%;
                         }
-    
+
                         .footer-goods-img-3 {
                             width: 30%;
                             top: 10%;
                             right: 3%;
                         }
                     }
-    
+
                     a {
                         font-size: 1.5rem;
                     }
                 }
             }
-    
+
             .footer-btn-2 {
                 width: 74%;
                 height: 11%;
-    
+
                 .footer-btn-child {
                     width: 100%;
                     height: 100%;
@@ -1212,14 +1307,14 @@ body {
                     display: flex;
                     align-items: center;
                     justify-content: center;
-    
+
                     a {
                         font-size: 1.5rem;
                     }
                 }
             }
         }
-    
+
         .parent-footer-2 {
             width: 100vw;
             height: 10%;
@@ -1227,5 +1322,3 @@ body {
         }
     }
 }
-
-
